--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@
 cmake_minimum_required(VERSION 3.15)
 include(cmake/version.cmake)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(MSDF_ATLAS_BUILD_STANDALONE "Build the msdf-atlas-gen standalone executable" ON)
-option(MSDF_ATLAS_USE_VCPKG "Use vcpkg package manager to link project dependencies" ON)
-option(MSDF_ATLAS_USE_SKIA "Build with the Skia library" ON)
+option(MSDF_ATLAS_USE_VCPKG "Use vcpkg package manager to link project dependencies" OFF)
+option(MSDF_ATLAS_USE_SKIA "Build with the Skia library" OFF)
 option(MSDF_ATLAS_NO_ARTERY_FONT "Disable Artery Font export and do not require its submodule" OFF)
 option(MSDF_ATLAS_MSDFGEN_EXTERNAL "Do not build the msdfgen submodule but find it as an external package" OFF)
 option(MSDF_ATLAS_INSTALL "Generate installation target" OFF)
